change: add GOPATH and tty to docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,9 @@
 version: '3'
 services:
   app:
-    build: src
-    ports:
-      - "8080:8080"
+    build: .
+    tty: true
+    volumes:
+      - ./:/go
+    environment:
+      - "GOPATH=/go"
